k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-prep-api
  namespace: job-prep
spec:
  type: ClusterIP
  selector:
    app: job-prep-api
  ports:
    - name: http
      port: 80
      targetPort: http
